--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -5,4 +5,31 @@ html
     link(rel='stylesheet', href='./styles/main.css')
     script(src='./javascripts/all.js')
   body
-    .header Welcome
+    .container
+      .nav
+        ul.main_menu
+          li УЧИТЬ КАНДЗИ
+          li СМОТРЕТЬ СТАТИСТИКУ
+          li О ПРИЛОЖЕНИИ
+      .content
+        .styled_select
+          select
+            option(value='JLPT 5') JLPT 5
+            option(value='JLPT 4') JLPT 4
+            option(value='JLPT 3') JLPT 3
+            option(value='JLPT 2') JLPT 2
+            option(value='JLPT 1') JLPT 1
+          
+        .table-container
+          table
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+
