Adds floats and divs

--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -12,14 +12,6 @@ html
           li СМОТРЕТЬ СТАТИСТИКУ
           li О ПРИЛОЖЕНИИ
       .content
-        .styled_select
-          select
-            option(value='JLPT 5') JLPT 5
-            option(value='JLPT 4') JLPT 4
-            option(value='JLPT 3') JLPT 3
-            option(value='JLPT 2') JLPT 2
-            option(value='JLPT 1') JLPT 1
-          
         .table-container
           table
             tr
@@ -27,9 +19,113 @@ html
               td 洗
               td 洗
               td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
             tr
               td 洗
               td 洗
               td 洗
               td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+            tr
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+              td 洗
+      .sidebar
+        .styled_select
+          select
+            option(value='JLPT 5') JLPT 5
+            option(value='JLPT 4') JLPT 4
+            option(value='JLPT 3') JLPT 3
+            option(value='JLPT 2') JLPT 2
+            option(value='JLPT 1') JLPT 1
+      footer
+        p Copyright is a lie. Use my tempate as you wish, sick bastard
 
