--- a/frontend/styles/main.styl
+++ b/frontend/styles/main.styl
@@ -1,3 +1,12 @@
 @import './reset_css'
 @import './upper_menu'
+@import './footer'
+@import './table_container'
+
+.container
+    position relative
+
+.content
+    float left
+    width 75%
 
