--- a/frontend/styles/main.styl
+++ b/frontend/styles/main.styl
@@ -1,12 +1,42 @@
 @import './reset_css'
 @import './upper_menu'
-@import './footer'
 @import './table_container'
+@import './select'
 
 .container
-    position relative
+  width: 100%
+
+.nav
+  background-color: white
+  text-align: left
+  font-family: Helvetica, Arial, sans-serif
+  font-size: 12px
+  box-shadow: 0 2px 4px #000000
+  padding-top: 43px
+  padding-bottom: 43px
+  position: relative
 
 .content
-    float left
-    width 75%
+  position: relative
 
+.main_menu
+  float: left
+
+.sidebar
+  float: right
+  width: 25%
+
+footer
+  position:absolute
+  bottom:0
+
+  width: 100%
+  background-color: white
+  text-align: center
+  font-family: Helvetica, Arial, sans-serif
+  font-size: 12px
+  padding-top: 43px
+  padding-bottom: 43px
+  border: 1px solid #B0BAC5
+  text-align: center
+  clear: both
