--- a/frontend/styles/table_container.styl
+++ b/frontend/styles/table_container.styl
@@ -1,9 +1,14 @@
 .table-container
-    width: 100%
-    
     text-align: center
+    width: 75%
 
 .table-container table
     margin: 0 auto
     margin-bottom: 20px
     margin-top: 20px
+
+.table-container td
+    border: 1px solid #DFE6EE
+    padding: 20px 36px 20px 36px
+    &:hover { border-bottom: 2px solid #0099FA
+              box-sizing: border-box }
