--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -13,7 +13,7 @@ html
             li СМОТРЕТЬ СТАТИСТИКУ
             li О ПРИЛОЖЕНИИ
         .logo
-          img(src='https://staticaltmetric.s3.amazonaws.com/uploads/2015/10/dark-logo-for-site.png')
+          img(src='https://staticaltmetric.s3.amazonaws.com/uploads/2015/10/dark-logo-for-site.png' height='50px')
       .content
         .sidebar
           .styled_select
