--- a/frontend/styles/main.styl
+++ b/frontend/styles/main.styl
@@ -6,18 +6,13 @@
 .container
   width: 100%
 
-.nav
-  background-color: white
-  text-align: left
-  font-family: Helvetica, Arial, sans-serif
-  font-size: 12px
-  box-shadow: 0 2px 4px #000000
-  padding-top: 43px
-  padding-bottom: 43px
-  position: relative
-
 .content
   position: relative
+
+.logo
+  padding-top: 20px
+  text-align: right
+  height: 100%
 
 .main_menu
   float: left
