--- a/frontend/styles/table_container.styl
+++ b/frontend/styles/table_container.styl
@@ -10,5 +10,7 @@
 .table-container td
     border: 1px solid #DFE6EE
     padding: 20px 36px 20px 36px
-    &:hover { border-bottom: 2px solid #0099FA
-              box-sizing: border-box }
+    &:hover {
+              background-color: #0099FA
+              color: white
+            }
