--- a/frontend/styles/upper_menu.styl
+++ b/frontend/styles/upper_menu.styl
@@ -1,12 +1,19 @@
 .nav
-    background-color: white
-    width: 100%
-    text-align: left
-    font-family: Helvetica, Arial, sans-serif
-    font-size: 12px
-    box-shadow: 0 2px 4px #000000
-    padding-top: 43px
-    padding-bottom: 43px
+  background-color: white
+  text-align: left
+  font-family: Helvetica, Arial, sans-serif
+  font-size: 12px
+  padding-top: 43px
+  padding-bottom: 43px
+  float: left
+  &:after
+    display block
+    clear both
+
+.nav_container
+  position: relative
+  box-shadow: 0 2px 4px #000000
+  height: 100px
 
 .nav ul
     margin-left: 130px
