Brings improvements after CR

--- a/frontend/styles/table_container.styl
+++ b/frontend/styles/table_container.styl
@@ -3,9 +3,7 @@
     width: 75%
 
 .table-container table
-    margin: 0 auto
-    margin-bottom: 20px
-    margin-top: 20px
+    margin: 20px auto
 
 .table-container td
     border: 1px solid #DFE6EE
