--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -9,126 +9,30 @@ html
       .nav_container
         .nav
           ul.main_menu
-            li УЧИТЬ КАНДЗИ
-            li СМОТРЕТЬ СТАТИСТИКУ
-            li О ПРИЛОЖЕНИИ
+            li Учить кандзи
+            li Смотреть статистику
+            li О приложении
         .logo
           img(src='https://staticaltmetric.s3.amazonaws.com/uploads/2015/10/dark-logo-for-site.png' height='50px')
       .content
         .sidebar
           .styled_select
+            - var finalLevel = 5
             select
-              option(value='JLPT 5') JLPT 5
-              option(value='JLPT 4') JLPT 4
-              option(value='JLPT 3') JLPT 3
-              option(value='JLPT 2') JLPT 2
-              option(value='JLPT 1') JLPT 1
+              while finalLevel >= 1 
+                option(value='JLPT') JLPT #{finalLevel}
+                - finalLevel--
         .table-container
           table
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-            tr
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
-              td 洗
+            - var n = 0 
+            while n < 8
+              tr
+                - var k = 0
+                while k < 12
+                  td 洗
+                  - k++
+              - n++
+
       footer
         p Copyright is a lie. Use my tempate as you wish, sick bastard
 
