--- a/frontend/styles/main.styl
+++ b/frontend/styles/main.styl
@@ -4,34 +4,33 @@
 @import './select'
 
 .container
-    width: 100%
+    width 100%
 
 .content
-    position: relative
+    position relative
 
 .logo
-    padding-top: 20px
-    text-align: right
-    height: 100%
+    padding-top 20px
+    text-align right
+    height 100%
 
 .main_menu
-    float: left
+    float left
 
 .sidebar
-    float: right
-    width: 25%
+    float right
+    width 25%
 
 footer
-    position:absolute
-    bottom:0
+    position absolute
+    bottom 0
 
-    width: 100%
-    background-color: white
-    text-align: center
-    font-family: Helvetica, Arial, sans-serif
-    font-size: 12px
-    padding-top: 43px
-    padding-bottom: 43px
-    border: 1px solid #B0BAC5
-    text-align: center
-    clear: both
+    width 100%
+    background-color white
+    text-align center
+    font-family Helvetica, Arial, sans-serif
+    font-size 12px
+    padding 43px 0
+    border 1px solid #B0BAC5
+    text-align center
+    clear both
