--- a/frontend/styles/upper_menu.styl
+++ b/frontend/styles/upper_menu.styl
@@ -1,30 +1,31 @@
 .nav
-    background-color: white
-    text-align: left
-    font-family: Helvetica, Arial, sans-serif
-    font-size: 12px
-    padding-top: 43px
-    padding-bottom: 43px
-    float: left
-    &:after
-    display block
-    clear both
+    background-color white
+    text-align left
+    font-family Helvetica, Arial, sans-serif
+    font-size 12px
+    padding 43px 0
+    float left
+    &:after {
+              display: block
+              clear: both
+            }
 
 .nav_container
-    position: relative
-    box-shadow: 0 2px 4px #000000
-    height: 100px
+    position relative
+    box-shadow 0 2px 4px #000000
+    height 100px
 
 .nav ul
-    margin-left: 130px
+    margin-left 130px
 
 .nav ul li
-    display: inline
-    margin-right: 40px
-    color: #8091A5
-
-    padding-bottom: 37px
-    &:hover { border-bottom: 6px solid #0099FA }
-
+    display inline
+    margin-right 40px
+    color #8091A5
+    padding-bottom 37px
+    text-transform uppercase
+    &:hover {
+              border-bottom: 6px solid #0099FA 
+            }
 
 
