--- a/frontend/styles/table_container.styl
+++ b/frontend/styles/table_container.styl
@@ -2,10 +2,10 @@
     text-align: center
     width: 75%
 
-.table-container table
+.table-container__table
     margin: 20px auto
 
-.table-container td
+.table-container__table__td
     border: 1px solid #DFE6EE
     padding: 20px 36px 20px 36px
     &:hover {
