--- a/frontend/styles/upper_menu.styl
+++ b/frontend/styles/upper_menu.styl
@@ -10,15 +10,15 @@
               clear: both
             }
 
-.nav_container
+.nav-container
     position relative
     box-shadow 0 2px 4px #000000
     height 100px
 
-.nav ul
+.nav__ul
     margin-left 130px
 
-.nav ul li
+.nav__ul__li
     display inline
     margin-right 40px
     color #8091A5
