--- a/frontend/styles/main.styl
+++ b/frontend/styles/main.styl
@@ -1,32 +1,6 @@
 @import './reset_css'
-@import './upper_menu'
-@import './table_container'
-
-.container
-    width 100%
-
-.content
-    position relative
-
-.logo
-    padding-top 20px
-    text-align right
-    height 100%
-
-.sidebar
-    float right
-    width 25%
-
-footer
-    position absolute
-    bottom 0
-
-    width 100%
-    background-color white
-    text-align center
-    font-family Helvetica, Arial, sans-serif
-    font-size 12px
-    padding 43px 0
-    border 1px solid #B0BAC5
-    text-align center
-    clear both
+@import './container'
+@import './nav'
+@import './table'
+@import './sidebar'
+@import './table'
