--- a/frontend/styles/nav.styl
+++ b/frontend/styles/nav.styl
@@ -6,26 +6,26 @@
     padding 43px 0
     float left
     &:after {
-              display: block
-              clear: both
-            }
+        display: block
+        clear: both
+    }
 
-.nav-container
-    position relative
-    box-shadow 0 2px 4px #000000
-    height 100px
+.nav__logo
+    padding-top 20px
+    text-align right
+    height 100%
 
 .nav__ul
     margin-left 130px
 
-.nav__ul__li
+.nav__li
     display inline
     margin-right 40px
     color #8091A5
     padding-bottom 37px
     text-transform uppercase
     &:hover {
-              border-bottom: 6px solid #0099FA 
-            }
+      border-bottom: 6px solid #0099FA
+    }
 
 
