Improvements after CR part 2

--- a/frontend/styles/main.styl
+++ b/frontend/styles/main.styl
@@ -1,6 +1,1 @@
-@import './reset_css'
-@import './container'
-@import './nav'
-@import './table'
-@import './sidebar'
-@import './table'
+@import 'blocks/**/*.styl';
