--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -4,6 +4,8 @@ html
     meta(charset='UTF-8')
     link(rel='stylesheet', href='./styles/main.css')
     script(src='./javascripts/all.js')
+    link(rel='stylesheet', href='../node_modules/choices.js/assets/styles/css/choices.min.css')
+    script(src='../node_modules/choices.js/assets/scripts/dist/choices.min.js')
   body
     .container
       .container__nav
