--- a/frontend/styles/blocks/container.styl
+++ b/frontend/styles/blocks/container.styl
@@ -10,8 +10,8 @@
     height 100px
 
 .container__table
-    text-align: center
-    width: 75%
+    text-align center
+    width 75%
 
 .container__footer
     position absolute
