--- a/frontend/styles/blocks/nav.styl
+++ b/frontend/styles/blocks/nav.styl
@@ -5,10 +5,9 @@
     font-size 12px
     padding 43px 0
     float left
-    &:after {
-        display: block
-        clear: both
-    }
+    &:after
+        display block
+        clear both
 
 .nav__logo
     padding-top 20px
@@ -24,8 +23,7 @@
     color #8091A5
     padding-bottom 37px
     text-transform uppercase
-    &:hover {
-      border-bottom: 6px solid #0099FA
-    }
+    &:hover
+      border-bottom 6px solid #0099FA
 
 
