--- a/frontend/styles/blocks/table.styl
+++ b/frontend/styles/blocks/table.styl
@@ -4,7 +4,6 @@
 .table__td
     border 1px solid #DFE6EE
     padding 20px 36px 20px 36px
-    &:hover {
-      background-color: #0099FA
-      color: white
-    }
+    &:hover
+      background-color #0099FA
+      color white
