Adds behaviour to table

--- a/frontend/styles/blocks/table.styl
+++ b/frontend/styles/blocks/table.styl
@@ -7,3 +7,14 @@
     &:hover
       background-color #0099FA
       color white
+
+
+.table__td_clicked
+    background-color #0099FA
+    color white
+
+.table__td_know-well
+    background-color gray
+
+.table__td_know-bad
+    background-color #fa0000
