--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -21,15 +21,17 @@ html
           .styled_select
             select
               - for (var i = 5; i >=1; --i)
-                option(value='JLPT') JLPT #{i}
+                option(value=i) JLPT #{i}
+          .answer
+            .answer__button._color_blue.js-know-well
+              p Знаю хорошо
+            .answer__button._color_red.js-know-bad
+              p Знаю не очень хорошо
+
         .container__table
           table.table
-            - for (var i = 0; i < 8; ++i)
-              tr
-                - for (var j = 0; j < 12; ++j)
-                  td.table__td 洗
 
 
-      footer.container__footer
-        p Copyright is a lie. Use my tempate as you wish, sick bastard
+    footer.container__footer
+      p Copyright is a lie. Use my tempate as you wish, sick bastard
 
