--- a/frontend/styles/blocks/container.styl
+++ b/frontend/styles/blocks/container.styl
@@ -1,5 +1,6 @@
 .container
     width 100%
+    margin-bottom -100px
 
 .container__content
     position relative
@@ -14,7 +15,8 @@
     width 75%
 
 .container__footer
-    position absolute
+    position fixed
+    left 0
     bottom 0
 
     width 100%
@@ -22,7 +24,7 @@
     text-align center
     font-family Helvetica, Arial, sans-serif
     font-size 12px
-    padding 43px 0
+    padding 20px 0
     border 1px solid #B0BAC5
     text-align center
     clear both
