--- a/frontend/statistics.pug
+++ b/frontend/statistics.pug
@@ -1,24 +1,17 @@
 doctype html
 html
-  head
-    meta(charset='UTF-8')
-    link(rel='stylesheet', href='./styles/main.css')
-    script(src='./javascripts/all.js')
-    link(rel='stylesheet', href='../node_modules/choices.js/assets/styles/css/choices.min.css')
-    script(src='../node_modules/choices.js/assets/scripts/dist/choices.min.js')
+  include includes/head.pug
   body
     .container
-      .container__nav
-        nav.nav
-          ul.nav__ul
-            li.nav__li Учить кандзи
-            li.nav__li
-              a(href='./statistics.html') Смотреть статистику
-            li.nav__li О приложении
-        .nav__logo
-          img(src='https://staticaltmetric.s3.amazonaws.com/uploads/2015/10/dark-logo-for-site.png' height='50px')
+      include includes/nav.pug
       .container__content
-        canvas(width='300' height='300').statistics
+        .container__canvas
+          canvas(width='400' height='400').statistics
+        .container__statistics
+          h2
+            b Уровень N3
+          p Выучено иероглифов 154
+          p Осталось иероглифов 700
 
     footer.container__footer
       p Copyright is a lie. Use my tempate as you wish, sick bastard
