--- a/frontend/styles/blocks/container.styl
+++ b/frontend/styles/blocks/container.styl
@@ -14,6 +14,16 @@
     text-align center
     width 75%
 
+.container__canvas
+    width 75%
+    float left
+    text-align center
+
+.container__statistics
+    text-align center
+    margin-top 20px
+
+
 .container__footer
     position fixed
     left 0
@@ -28,3 +38,4 @@
     border 1px solid #B0BAC5
     text-align center
     clear both
+
