Adds local storage and graphs

--- a/frontend/index.pug
+++ b/frontend/index.pug
@@ -7,7 +7,7 @@ html
       .container__content
         .sidebar
           .styled_select
-            select
+            select.js-main-page-select
               - for (var i = 5; i >=1; --i)
                 option(value=i) JLPT #{i}
           .answer
