--- a/frontend/styles/blocks/container.styl
+++ b/frontend/styles/blocks/container.styl
@@ -15,14 +15,15 @@
     width 75%
 
 .container__canvas
-    width 75%
-    float left
+    width 50%
     text-align center
+    float left
 
 .container__statistics
     text-align center
     margin-top 20px
-
+    float right
+    width 50%
 
 .container__footer
     position fixed
