Adds html template and some css

--- a/frontend/includes/nav.pug
+++ b/frontend/includes/nav.pug
@@ -7,5 +7,7 @@
         a(href='./statistics.html') Смотреть статистику
       li.nav__li
         a(href='./about.html') О приложении
+      li.nav__li
+        a(href='./star_wars.html') Звездные войны
   .nav__logo
     img(src='https://staticaltmetric.s3.amazonaws.com/uploads/2015/10/dark-logo-for-site.png' height='50px')
