--- a/frontend/styles/star_wars/blocks/header.styl
+++ b/frontend/styles/star_wars/blocks/header.styl
@@ -4,9 +4,13 @@
     clear both
     display block
     content ''
+  padding 98px 0 24px 0
 
 .header__logo
   float left
+  width 25%
 
 .header__menu
-  flost left
+  float left
+  width 75%
+  padding 75px 0 0 0
