--- a/frontend/styles/star_wars/blocks/nav.styl
+++ b/frontend/styles/star_wars/blocks/nav.styl
@@ -1,2 +1,8 @@
 ul li
-  display inline
+  display inline-block
+  text-transform uppercase
+  font-size 0.875rem
+
+  &::hover
+    background-color #ebed11
+
