Adds Start wars title

--- a/frontend/star_wars.pug
+++ b/frontend/star_wars.pug
@@ -34,7 +34,7 @@ html
                   span.arrow.arrow_violet
         .slider
           .slider__header
-            h1 Звездные войны
+            h1 Звёздные войны
           .slider__image
             img(src="https://starwars.ru/media/slider/1024x4095.jpg")
         .under_slider
