--- a/frontend/styles/star_wars/blocks/slider.styl
+++ b/frontend/styles/star_wars/blocks/slider.styl
@@ -7,6 +7,10 @@
   text-transform uppercase
   font-size 1.1rem
   position relative
+  bottom -10px
+  right 20px
+  color gray
+
 
 .slider__header h1::after
   background-color #1a1a1a
@@ -16,7 +20,7 @@
   width 20%
   height 28px
   position absolute
-  bottom -28px
-  right 2px
+  bottom -8px
+  right -7px
   -webkit-transform skew(45deg)
   transform skew(45deg)
