--- a/frontend/star_wars.pug
+++ b/frontend/star_wars.pug
@@ -185,48 +185,46 @@ html
           .gallery__content
             .gallery__item
               img(src="")
-        footer.footer
-          .footer__list
-            .column
-              h4 Вселенная
+        .basement
+          .basement__list
+            .basement__column
+              h4.basement__h4 Вселенная
               ul
-                li Персонажи
-                li Группы
-                li Технологии
-                li Локации
-                li События
-            .column
-              h4 Фильмы
+                li.basement__li Персонажи
+                li.basement__li Группы
+                li.basement__li Технологии
+                li.basement__li Локации
+                li.basement__li События
+            .basement__column
+              h4.basement__h4 Фильмы
               ul
-                li Последние Джедаи
-                li Изгой-один
-                li Звездные войны: Пробуждение силы
-                li Эпизод I
-                li Эпизод II
-                li Эпизод III
-            .column
-              h4 Игры
+                li.basement__li Последние Джедаи
+                li.basement__li Изгой-один
+                li.basement__li Звездные войны: Пробуждение силы
+                li.basement__li Эпизод I
+                li.basement__li Эпизод II
+                li.basement__li Эпизод III
+            .basement__column
+              h4.basement__h4 Игры
               ul
-                li Онлайн игры
-                li Мобильные игры
-                li Видеоигры
-            .column
-              h4 Анимация
+                li.basement__li Онлайн игры
+                li.basement__li Мобильные игры
+                li.basement__li Видеоигры
+            .basement__column
+              h4.basement__h4 Анимация
               ul
-                li Звездные войны: Повстанцы
-                li Звездные войны: Войны клонов
-                li LEGO: STAR WARS
-            .column
-              h4 Видео
-              ul
-                li Новости
-          .footer__social
-            .social
-              h4 Присоединяйтесь
-              ul
-                li Фейсбук
-                li ОК
-                li Твиттер
-                li Ютупс
-                li Инстахрам
+                li.basement__li Звездные войны: Повстанцы
+                li.basement__li Звездные войны: Войны клонов
+                li.basement__li LEGO: STAR WARS
+            .basement__column
+              h4.basement__h4 Видео
+              h4.basement__h4 Новости
+          .basement__social
+            h4 Присоединяйтесь
+            ul
+              li Фейсбук
+              li ОК
+              li Твиттер
+              li Ютупс
+              li Инстахрам
 
