Improves issues pointed by supervisor after CR

--- a/frontend/star_wars.pug
+++ b/frontend/star_wars.pug
@@ -14,7 +14,7 @@ html
               ul
                 li
                   include svg/universe.pug
-                  |Вселенная
+                  p Вселенная
                   span.arrow.arrow_blue
                 li
                   include svg/ic_movies.pug
@@ -38,7 +38,7 @@ html
           .slider__image
             img(src="https://starwars.ru/media/slider/1024x4095.jpg")
         .under_slider
-          .under_slider__search
+          .under-slider__search
             .search
               .search__container
                 .search__icon
@@ -48,7 +48,7 @@ html
           .under_slider__weather
             img(src="https://starwars.ru/media/cache/eb/1b/eb1bea5ff4884d57681f4c9002860330.png")
         .gallery.heroes
-          .gallery__main_title
+          .gallery__main-title
             h2 Вселенная
           .gallery__nav_container
             .menu_nav
@@ -62,7 +62,7 @@ html
             .arrows
           .gallery__content
             .gallery__item
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru/media/cache/95/fe/95fe5a20bc008e01ba7ec07a7f1833f8.png")
               .gallery__title
                 h4 Рей
@@ -72,48 +72,48 @@ html
                 h4 BB-8
                 p Верный друг
 
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru/media/cache/80/a3/80a349fec29984407b77124379b2ce7c.png")
             .gallery__item
               .gallery__title
                 h4 По Дэмерон
                 p Лучший пилот Сопротивления
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru//media/cache/6b/78/6b783b3fea7ee0ee3bc336506e31a69d.png")
             .gallery__item
               .gallery__title
                 h4 Генерал Хакс
                 p Сторонник традиционных методов
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru/media/cache/f0/3e/f03efa071e5672ab648da9c061499a5f.png")
             .gallery__item
               .gallery__title
                 h4 Кайло Рен
                 p Преданный ученик Сноука
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru/media/cache/ef/de/efde7e3121b1073f64c9a40b4d29ce9d.png")
             .gallery__item
               .gallery__title
                 h4 Финн
                 p Штурмовик-дезертир
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru/media/cache/00/5c/005c66cbed16bf6ff55cb4502da45c1b.png")
             .gallery__item
               .gallery__title
                 h4 Верховный лидер Сноук
                 p Загадочная фигура во главе Первого Ордена
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru/media/cache/ad/49/ad492a4103f38c19b6e2c4118a003511.png")
             .gallery__item
               .gallery__title
                 h4 Капитан Фазма
                 p Командир Штурмовиков
-              .gallery_image
+              .gallery__image
                 img(width="248px" height="248px" src="https://starwars.ru/media/cache/8c/87/8c87ffb3b664d3062876db3faf8b710d.png")
           .gallery__link_all
             a.all_link(href='') Все персонажи
         .gallery.movies
-          .gallery__main_title
+          .gallery__main-title
             h2 Фильмы
           .gallery__nav_container
             .menu_nav
@@ -124,30 +124,30 @@ html
               .gallery__title
                 h4 Хан Соло
                 p Хан Соло
-              .gallery_image
+              .gallery__image
                 img(width="247px" height="348px" src="https://starwars.ru/media/cache/4d/c0/4dc064a111c8a77888c079a5e5e5f289.png")
             .gallery__item
               .gallery__title
                 h4 Последние джедаи
                 p Звездные войны
-              .gallery_image
+              .gallery__image
                 img(width="247px" height="348px" src="https://starwars.ru/media/cache/78/b8/78b8a538ae6613919b8b3e2d3966ebbe.png")
             .gallery__item
               .gallery__title
                 h4 Изгой-один
                 p Изгой-один
-              .gallery_image
+              .gallery__image
                 img(width="247px" height="348px" src="https://starwars.ru/media/cache/6b/76/6b76e7bbc0226c835dbc5a9bc332a0bd.png")
             .gallery__item
               .gallery__title
                 h4 Пробуждение силы
                 p Пробуждение силы
-              .gallery_image
+              .gallery__image
                 img(width="247px" height="348px" src="https://starwars.ru/media/cache/fc/90/fc9012f29aec3ff8a3b169d903ccbe11.png")
           .gallery__link_all
             a.all_link(href='') Все фильмы
         .gallery.games
-          .gallery__main_title
+          .gallery__main-title
             h2 Игры
           .gallery__nav_container
             .menu_nav
@@ -161,17 +161,17 @@ html
             .gallery__item
               .gallery__title
                 p Скорость и драйв
-              .gallery_image
+              .gallery__image
                 img(width="247px" height="102px" src="https://starwars.ru/media/cache/aa/99/aa9912cb13cfa2a3d6694fb89e425772.png")
             .gallery__item
               .gallery__title
                 p Финес и Ферб — Дроид-мастера
-              .gallery_image
+              .gallery__image
                 img(width="247px" height="102px" src="https://starwars.ru/media/cache/aa/99/aa9912cb13cfa2a3d6694fb89e425772.png")
             .gallery__item
               .gallery__title
                 p Атака повстанцев
-              .gallery_image
+              .gallery__image
                 img(width="247px" height="102px" src="https://starwars.ru/media/cache/aa/99/aa9912cb13cfa2a3d6694fb89e425772.png")
           .gallery__link_all
             a.all_link(href='') Все онлайн игры
@@ -185,41 +185,39 @@ html
           .gallery__content
             .gallery__item
               img(src="")
+        -
+          footerList = [
+            { title: "Вселенная", listItems: ["Персонажи", "Группы", "Технологии", "Локации", "События"] },
+            { title: "Фильмы",listItems: ["Последние Джедаи", "Изгой-один", "Звездные войны: Пробуждение силы", "Эпизод I", "Эпизод II", "Эпизод III"] }, 
+            { title: "Игры",listItems: ["Онлайн игры", "Мобильные игры", "Видеоигры"] },
+            { title: "Анимация",listItems: ["Звездные войны: Повстанцы", "Звездные войны: Войны клонов", "LEGO: STAR WARS"] },
+            { title: "Видео",listItems: ["Новости"] }
+          ]
         footer.footer
           .footer__list
-            .column
-              h4 Вселенная
-              ul
-                li Персонажи
-                li Группы
-                li Технологии
-                li Локации
-                li События
-            .column
-              h4 Фильмы
-              ul
-                li Последние Джедаи
-                li Изгой-один
-                li Звездные войны: Пробуждение силы
-                li Эпизод I
-                li Эпизод II
-                li Эпизод III
-            .column
-              h4 Игры
-              ul
-                li Онлайн игры
-                li Мобильные игры
-                li Видеоигры
-            .column
-              h4 Анимация
-              ul
-                li Звездные войны: Повстанцы
-                li Звездные войны: Войны клонов
-                li LEGO: STAR WARS
-            .column
-              h4 Видео
-              ul
-                li Новости
+            each item in footerList
+              .column
+                h4= item['title']
+                ul
+                  each list_item in item['listItems']
+                    li= list_item
+
+            //- .column
+            //-   h4 Игры
+            //-   ul
+            //-     li Онлайн игры
+            //-     li Мобильные игры
+            //-     li Видеоигры
+            //- .column
+            //-   h4 Анимация
+            //-   ul
+            //-     li Звездные войны: Повстанцы
+            //-     li Звездные войны: Войны клонов
+            //-     li LEGO: STAR WARS
+            //- .column
+            //-   h4 Видео
+            //-   ul
+            //-     li Новости
           .footer__social
             .social
               h4 Присоединяйтесь
