--- a/frontend/styles/star_wars/blocks/arrow_down.styl
+++ b/frontend/styles/star_wars/blocks/arrow_down.styl
@@ -1,22 +1,19 @@
 .arrow
-  margin -5px 6px 0 0
-  width 0
-  height 0
   border-left 5px solid transparent
   border-right 5px solid transparent
   border-top 5px solid #f00
 
-.arrow_blue
-  border-top 5px solid #1e91ea
+  &_blue
+    border-top 5px solid #1e91ea
 
-.arrow_red
-  border-top 5px solid #e65121
+  &_red
+    border-top 5px solid #e65121
 
-.arrow_green
-  border-top 5px solid #419b5b
+  &_green
+    border-top 5px solid #419b5b
 
-.arrow_yellow
-  border-top 5px solid #dcb030
+  &_yellow
+    border-top 5px solid #dcb030
 
-.arrow_violet
-  border-top 5px solid #9e59da
+  &_violet
+    border-top 5px solid #9e59da
