--- a/frontend/styles/star_wars/blocks/header.styl
+++ b/frontend/styles/star_wars/blocks/header.styl
@@ -1,9 +1,8 @@
+@import '../../mixins/clear_fix.styl'
+
 .header
   position relative
-  &::after
-    clear both
-    display block
-    content ''
+  clear_fix()
   padding 98px 0 24px 0
 
 .header__logo
