--- a/frontend/styles/svg.styl
+++ b/frontend/styles/svg.styl
@@ -1,29 +1,28 @@
-#ic_animation
+.ic_animation
   height 16px
   width 20px
   fill #dcb030
   margin -8px 4px 0 0
 
-
-#ic_movies
+.ic_movies
   height 20px
   width 21px
   fill #e65121
   margin -9px 6px 0 0
 
-#ic_games
+.ic_games
   height 16px
   width 26px
   fill #419b5b
   margin -6px 6px 0 0
 
-#ic_video
+.ic_video
   height 18px
   width 18px
   fill #9e59da
   margin -5px 6px 0 0
 
-#universe
+.ic_universe
   height 15px
   width 20px
   fill #1e91ea
