--- a/frontend/styles/star_wars/blocks/under_slider.styl
+++ b/frontend/styles/star_wars/blocks/under_slider.styl
@@ -1,12 +1,13 @@
+@import '../../mixins/clear_fix.styl'
 .under_slider
   position relative
 
   &::after
     content ''
     display block
-    clear both
+    clear-fix()
 
-.under_slider__search
+.under-slider__search
   width 50%
 
 .under_slider__weather
